# campip

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  service.nomad
infra/: app.yaml  db.yaml
migrations/2021-03-03-141010_location/: down.sql  up.sql
migrations/2021-03-07-070720_add_location_index/: down.sql  up.sql
src/: data.rs  db.rs  lib.rs  main.rs  schema.rs  service.rs  utils.rs
src/data/: csv.rs
src/db/: models.rs  postgres.rs
src/service/: app.rs  errors.rs
src/utils/: net.rs
