[package]
name = "campip"
version = "0.1.0"
authors = ["Alex Ewetumo <trinoxf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = ">=0.3"
actix-web = "3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.8.3"
csv = "1.1"
chrono = { version = "0.4", features = ["serde"]}
diesel = { version = ">=1.4.5", features = ["postgres", "r2d2", "chrono"]}
